# rust-python-benchmark

./: Readme.md  main.py  pyproject.toml
src/: lib.rs
