[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"

[project]
name = "rust-python"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
    "maturin==1.1.0",
    "pytest==7.3.2",
    "pytest-benchmark==4.0.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
